Implement database model
