# coderd/apidoc/swagger.json
@@ -4515,6 +4515,9 @@
         "motd_file": {
           "type": "string"
         },
+        "shutdown_script": {
+          "type": "string"
+        },
         "startup_script": {
           "type": "string"
         },
@@ -7328,6 +7331,9 @@
         "resource_id": {
           "type": "string",
           "format": "uuid"
+        },
+        "shutdown_script": {
+          "type": "string"
         },
         "startup_script": {
           "type": "string"
