# coderd/provisionerdserver/provisionerdserver.go
@@ -1118,6 +1118,10 @@ func InsertWorkspaceResource(ctx context.Context, db database.Store, jobID uuid.
 			MOTDFile:                    prAgent.GetMotdFile(),
 			LoginBeforeReady:            prAgent.GetLoginBeforeReady(),
 			StartupScriptTimeoutSeconds: prAgent.GetStartupScriptTimeoutSeconds(),
+			ShutdownScript: sql.NullString{
+				String: prAgent.ShutdownScript,
+				Valid:  prAgent.ShutdownScript != "",
+			},
 		})
 		if err != nil {
 			return xerrors.Errorf("insert agent: %w", err)
